--- a/res/xml/transparency_porn_layout.xml
+++ b/res/xml/transparency_porn_layout.xml
@@ -17,6 +17,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan">
 
+    <PreferenceCategory
+		android:title = "@string/qs">
     <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
         android:key="qs_transparent_header"
         android:title="@string/qs_transparent_header"
@@ -83,24 +85,10 @@
         aicpextras:unitsRight="px"
         android:persistent="false" />
 
-    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
-        android:key="transparent_power_menu"
-        android:title="@string/power_menu_transparency"
-        android:max="100"
-        aicpextras:min="0"
-        aicpextras:unitsLeft=""
-        aicpextras:unitsRight="%"
-        android:persistent="false" />
+   </PreferenceCategory>
 
-    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
-        android:key="transparent_power_dialog_dim"
-        android:title="@string/power_menu_dialog_dim"
-        android:max="100"
-        aicpextras:min="0"
-        aicpextras:unitsLeft=""
-        aicpextras:unitsRight="%"
-        android:persistent="false" />
-
+   <PreferenceCategory
+        android:title="@string/vol_diag">
     <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
         android:key="transparent_volume_dialog"
         android:title="@string/volume_dialog_transparency"
@@ -158,5 +146,27 @@
         aicpextras:unitsLeft=""
         aicpextras:unitsRight="px"
         android:persistent="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/power">
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="transparent_power_menu"
+        android:title="@string/power_menu_transparency"
+        android:max="100"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="%"
+        android:persistent="false" />
+
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="transparent_power_dialog_dim"
+        android:title="@string/power_menu_dialog_dim"
+        android:max="100"
+        aicpextras:min="0"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="%"
+        android:persistent="false" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
