AicpExtras: Expose Changelog hardcoded colors
Change-Id: Ifef03831544650b2a4378ded3f80196181b81896

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -23,4 +23,7 @@
     <color name="switchbar_text_color">#ffffffff</color>
     <color name="switch_accent_color">#ff7fcac3</color>
 
+    <!-- Changelog Colors -->
+    <color name="changelog_title_color">#E8D103</color>
+
 </resources>
