Fingerprint authentication vibration [2/2]
Change-Id: I6ebdca09b45549d44819a0742c84404db76f1d23

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -181,6 +181,12 @@
         android:summary="@string/keyguard_torch_summary"
         android:defaultValue="false" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="fingerprint_success_vib"
+        android:title="@string/fprint_sucess_vib_title"
+        android:summary="@string/fprint_sucess_vib_summary"
+        android:defaultValue="true" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
