AE: Boot dialog pimping (2/2)
Change-Id: I844d8e801c0e96e86ce47f7281989c59e142cdb2
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -44,6 +44,10 @@
         android:entryValues="@array/media_scanner_on_boot_values" />
 
     <Preference
+        android:key="boot_dialog_pimping"
+        android:title="@string/boot_dialog_title" />
+
+    <Preference
         android:key="system_app_remover"
         android:title="@string/system_app_remover" />
 
