--- a/res/xml/boot_dialog.xml
+++ b/res/xml/boot_dialog.xml
@@ -17,40 +17,46 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan">
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+    <PreferenceCategory
         android:key="boot_dialog_bg_pimping"
-        android:title="@string/boot_dialog_title"
-        android:defaultValue="true" />
+        android:title="@string/boot_dialog_bg_category_title">
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="boot_dialog_bg_color"
-        android:title="@string/boot_dialog_bg_color_title"
-        android:dependency="boot_dialog_bg_pimping" />
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="boot_dialog_bg_pimping"
+            android:title="@string/boot_dialog_pimping_title"
+            android:defaultValue="true" />
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="boot_dialog_stroke_color"
-        android:title="@string/boot_dialog_stroke_color_title"
-        android:dependency="boot_dialog_bg_pimping" />
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="boot_dialog_bg_color"
+            android:title="@string/boot_dialog_bg_color_title"
+            android:dependency="boot_dialog_bg_pimping" />
 
-    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
-        android:key="boot_dialog_stroke_thickness"
-        android:title="@string/boot_dialog_stroke_thickness_title"
-        android:max="25"
-        aicpextras:min="1"
-        aicpextras:unitsLeft=""
-        aicpextras:unitsRight="px"
-        android:persistent="false"
-        android:dependency="boot_dialog_bg_pimping" />
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="boot_dialog_stroke_color"
+            android:title="@string/boot_dialog_stroke_color_title"
+            android:dependency="boot_dialog_bg_pimping" />
 
-    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
-        android:key="boot_dialog_corner_radius"
-        android:title="@string/boot_dialog_corner_radius_title"
-        android:max="75"
-        aicpextras:min="0"
-        aicpextras:unitsLeft=""
-        aicpextras:unitsRight="px"
-        android:persistent="false"
-        android:dependency="boot_dialog_bg_pimping" />
+        <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+            android:key="boot_dialog_stroke_thickness"
+            android:title="@string/boot_dialog_stroke_thickness_title"
+            android:max="25"
+            aicpextras:min="1"
+            aicpextras:unitsLeft=""
+            aicpextras:unitsRight="px"
+            android:persistent="false"
+            android:dependency="boot_dialog_bg_pimping" />
+
+        <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+            android:key="boot_dialog_corner_radius"
+            android:title="@string/boot_dialog_corner_radius_title"
+            android:max="75"
+            aicpextras:min="0"
+            aicpextras:unitsLeft=""
+            aicpextras:unitsRight="px"
+            android:persistent="false"
+            android:dependency="boot_dialog_bg_pimping" />
+
+    </PreferenceCategory>
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="boot_dialog_packages_random_color"
