--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -23,4 +23,6 @@
     <color name="switchbar_text_color">#ffffffff</color>
     <color name="switch_accent_color">#ff7fcac3</color>
 
+    <color name="seekbar_dot_color">@android:color/holo_red_light</color>
+
 </resources>
