Add proper DefaultVal to all SeekBarPreferenceCham sliders
Change-Id: I368d4cd49dbd4f554dd4799156c1b8304a80bd13

--- a/res/xml/app_circlebar.xml
+++ b/res/xml/app_circlebar.xml
@@ -35,7 +35,7 @@
         android:key="trigger_width"
         android:title="@string/trigger_width_title"
         android:summary="@string/trigger_width_summary"
-        android:defaultValue="4"
+        aicpextras:defaultVal="4"
         aicpextras:max="64"
         aicpextras:min="4"
         aicpextras:unitsLeft=""
@@ -46,7 +46,7 @@
         android:key="trigger_top"
         android:title="@string/trigger_top_title"
         android:summary="@string/trigger_top_summary"
-        android:defaultValue="0"
+        aicpextras:defaultVal="0"
         aicpextras:max="99"
         aicpextras:min="0"
         aicpextras:unitsLeft=""
@@ -57,7 +57,7 @@
         android:key="trigger_bottom"
         android:title="@string/trigger_bottom_title"
         android:summary="@string/trigger_bottom_summary"
-        android:defaultValue="100"
+        aicpextras:defaultVal="100"
         aicpextras:max="100"
         aicpextras:min="1"
         aicpextras:unitsLeft=""
