--- a/res/xml/boot_dialog.xml
+++ b/res/xml/boot_dialog.xml
@@ -44,6 +44,7 @@
             aicpextras:unitsLeft=""
             aicpextras:unitsRight="px"
             android:persistent="false"
+            aicpextras:defaultVal="12"
             android:dependency="boot_dialog_bg_pimping" />
 
         <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
@@ -54,6 +55,7 @@
             aicpextras:unitsLeft=""
             aicpextras:unitsRight="px"
             android:persistent="false"
+            aicpextras:defaultVal="45"
             android:dependency="boot_dialog_bg_pimping" />
 
     </PreferenceCategory>
