--- a/res/xml/keyboard_animation_interface_settings.xml
+++ b/res/xml/keyboard_animation_interface_settings.xml
@@ -53,7 +53,7 @@
             aicpextras:interval="1"
             aicpextras:unitsLeft=""
             aicpextras:unitsRight=" * 15ms"
-            android:defaultValue="0" />
+            aicpextras:defaultVal="0" />
 
         <Preference
             android:key="ime_anim_reset"
