--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -126,6 +126,7 @@
          aicpextras:interval="1"
          aicpextras:unitsLeft=""
          aicpextras:unitsRight="%"
+         aicpextras:defaultVal="45"
          android:persistent="false" />
 
     <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
@@ -136,6 +137,7 @@
          aicpextras:interval="1"
          aicpextras:unitsLeft=""
          aicpextras:unitsRight="%"
+         aicpextras:defaultVal="75"
          android:persistent="false" />
 
     </PreferenceCategory>
