--- a/res/xml/traffic.xml
+++ b/res/xml/traffic.xml
@@ -64,6 +64,7 @@
         aicpextras:unitsLeft=""
         aicpextras:unitsRight="kB/s"
         android:dependency="network_traffic_autohide"
+        aicpextras:defaultVal="10"
         android:persistent="false" />
 
 </PreferenceScreen>
