--- a/res/xml/app_sidebar_settings.xml
+++ b/res/xml/app_sidebar_settings.xml
@@ -56,7 +56,7 @@
         aicpextras:min="0"
         aicpextras:unitsLeft=""
         aicpextras:unitsRight="%"
-        android:defaultValue="0"
+        aicpextras:defaultVal="0"
         android:dependency="sidebar_enable" />
 
     <PreferenceCategory
@@ -66,7 +66,7 @@
             android:key="trigger_width"
             android:title="@string/trigger_width_title"
             android:summary="@string/trigger_width_summary"
-            android:defaultValue="4"
+            aicpextras:defaultVal="4"
             android:max="64"
             aicpextras:min="4"
             aicpextras:unitsLeft=""
@@ -77,7 +77,7 @@
             android:key="trigger_top"
             android:title="@string/trigger_top_title"
             android:summary="@string/trigger_top_summary"
-            android:defaultValue="0"
+            aicpextras:defaultVal="0"
             android:max="99"
             aicpextras:min="0"
             aicpextras:unitsLeft=""
@@ -88,7 +88,7 @@
             android:key="trigger_bottom"
             android:title="@string/trigger_bottom_title"
             android:summary="@string/trigger_bottom_summary"
-            android:defaultValue="100"
+            aicpextras:defaultVal="100"
             android:max="100"
             aicpextras:min="1"
             aicpextras:unitsLeft=""
