--- a/res/xml/carrierlabel.xml
+++ b/res/xml/carrierlabel.xml
@@ -46,7 +46,7 @@
     <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
         android:key="status_bar_carrier_font_size"
         android:title="@string/status_bar_carrier_size"
-        android:defaultValue="14"
+        aicpextras:defaultVal="14"
         android:max="23"
         aicpextras:min="4"
         aicpextras:unitsLeft=""
@@ -57,4 +57,4 @@
         android:title="@string/status_bar_carrier_color"
         android:defaultValue="0xffffffff" />
 
-</PreferenceScreen> 
+</PreferenceScreen>
