--- a/res/xml/gesture_anywhere.xml
+++ b/res/xml/gesture_anywhere.xml
@@ -45,7 +45,7 @@
         android:key="gesture_anywhere_trigger_width"
         android:title="@string/trigger_width_title"
         android:summary="@string/trigger_width_summary"
-        android:defaultValue="4"
+        aicpextras:defaultVal="4"
         android:max="64"
         aicpextras:min="4"
         aicpextras:unitsLeft=""
@@ -56,7 +56,7 @@
         android:key="gesture_anywhere_trigger_top"
         android:title="@string/trigger_top_title"
         android:summary="@string/trigger_top_summary"
-        android:defaultValue="0"
+        aicpextras:defaultVal="0"
         android:max="99"
         aicpextras:min="0"
         aicpextras:unitsLeft=""
@@ -67,7 +67,7 @@
         android:key="gesture_anywhere_trigger_bottom"
         android:title="@string/trigger_bottom_title"
         android:summary="@string/trigger_bottom_summary"
-        android:defaultValue="100"
+        aicpextras:defaultVal="100"
         android:max="100"
         aicpextras:min="1"
         aicpextras:unitsLeft=""
