--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#455A64</color>
-    <color name="startColor">#314048</color>
-    <color name="centerColor">#455A64</color>
-    <color name="endColor">#617e8c</color>
-    <color name="line_color">#B6B6B6</color>
-    <color name="colorAccent">#FF607D8B</color>
+    <color name="colorPrimary">#ffab00</color>
+    <color name="colorPrimaryDark">#ff8f00</color>
+    <color name="colorAccent">#3f51b5</color>
     <color name="overlayBackground">#00ffffff</color>
+    <color name="itemIconTint">#ffab00</color>
 
     <color name="background_material_dark">#FF303030</color>
     <color name="foreground_material_dark">#FFFFFFFF</color>
@@ -23,6 +20,6 @@
     <color name="switchbar_text_color">#ffffffff</color>
     <color name="switch_accent_color">#ff7fcac3</color>
 
-    <color name="seekbar_dot_color">@android:color/holo_red_light</color>
+    <color name="seekbar_dot_color">@color/colorPrimaryDark</color>
 
 </resources>
