--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,7 +5,6 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:navigationBarColor">?attr/colorPrimary</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -14,7 +13,7 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:background">@color/overlayBackground</item>
     </style>
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
 
     <!-- Dialog theming -->
     <style name="DialogStyle" parent="android:Theme.Material.Dialog">
@@ -22,23 +21,6 @@
         <item name="android:windowBackground">@color/background_material_dark</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-    </style>
-
-    <!-- Fragment theming -->
-    <style name="FragmentTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:navigationBarColor">?attr/colorPrimary</item>
-        <item name="android:colorBackground">@color/background_material_dark</item>
-        <item name="android:colorForeground">@color/foreground_material_dark</item>
-        <item name="android:textColorPrimary">@color/primary_text_material_dark</item>
-        <item name="android:textColorPrimaryInverse">@color/primary_text_material_light
-        </item>
-        <item name="android:textColorSecondary">@color/secondary_text_material_dark</item>
-        <item name="android:textColorSecondaryInverse">@color/secondary_text_material_light</item>
-        <item name="android:dialogTheme">@style/DialogStyle</item>
-        <item name="android:alertDialogTheme">@style/DialogStyle</item>
     </style>
 
     <!-- Switch bar -->
