AE: tint nav drawer logo same as that of the icons
Change-Id: I1667ec2b7770d78a209324f3b4cc303c3f9eae4e

--- a/res/layout/nav_header_main.xml
+++ b/res/layout/nav_header_main.xml
@@ -18,7 +18,8 @@
         android:contentDescription="@string/logo"
         android:paddingRight="@dimen/nav_header_vertical_spacing"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/ic_aicp" />
+        android:src="@drawable/ic_aicp"
+        android:tint="@color/itemIconTint" />
 
     <TextView
         android:layout_width="match_parent"
