--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#ffab00</color>
     <color name="overlayBackground">#00ffffff</color>
     <color name="itemIconTint">#ffab00</color>
+    <color name="seekbar_dot_color">@color/colorPrimary</color>
 
     <color name="background_material_dark">#FF303030</color>
     <color name="foreground_material_dark">#FFFFFFFF</color>
@@ -19,7 +20,5 @@
     <!-- Switch Bar Text Color -->
     <color name="switchbar_text_color">#ffffffff</color>
     <color name="switch_accent_color">#ff7fcac3</color>
-
-    <color name="seekbar_dot_color">@color/colorPrimaryDark</color>
 
 </resources>
