AE: Set navigation drawer opacity to 60%
Color is themable of course

Change-Id: I0b6b70e3e91586be2bb14992659797c89fa37f9b

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="overlayBackground">#00ffffff</color>
     <color name="itemIconTint">#ffab00</color>
     <color name="seekbar_dot_color">@color/colorPrimary</color>
+    <color name="navDrawerBg">#60000000</color>
 
     <color name="background_material_dark">#FF303030</color>
     <color name="foreground_material_dark">#FFFFFFFF</color>
