--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -33,4 +33,13 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <!-- Preference fragment -->
+    <style name="PreferenceTheme" parent="">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowActionBar">true</item>
+        <item name="android:windowNoTitle">false</item>
+    </style>
+
 </resources>
