Navigation drawer text selector color
Change-Id: I2781f48afc469e0e2bb31545b072931e0f79d7e7

--- a/res/layout/nav_header_main.xml
+++ b/res/layout/nav_header_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="fill_parent"
         android:contentDescription="@string/logo"
         android:src="@drawable/ic_nav_header_logo"
-        android:tint="@color/itemIconTint" />
+        android:tint="@color/colorAccent" />
 
     <LinearLayout
         android:layout_width="match_parent"
