--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -22,6 +22,6 @@
         android:background="@color/navDrawerBg"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer"
-        app:itemIconTint="@color/itemIconTint" />
+        app:itemIconTint="@color/colorAccent" />
 
 </android.support.v4.widget.DrawerLayout>
