--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,9 +4,10 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#ffab00</color>
     <color name="overlayBackground">#00ffffff</color>
-    <color name="itemIconTint">#ffab00</color>
     <color name="seekbar_dot_color">@color/colorPrimary</color>
     <color name="navDrawerBg">@color/background_material_dark</color>
+    <color name="navDrawerText">@android:color/white</color>
+    <color name="navDrawerTextChecked">@color/colorAccent</color>
 
     <color name="background_material_dark">#FF303030</color>
     <color name="foreground_material_dark">#FFFFFFFF</color>
