Navigation drawer text selector color
Change-Id: I2781f48afc469e0e2bb31545b072931e0f79d7e7

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,7 +21,6 @@
         android:fitsSystemWindows="true"
         android:background="@color/navDrawerBg"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer"
-        app:itemIconTint="@color/itemIconTint" />
+        app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
