AE: Navigation drawer text color settings (2/2)
Change-Id: I2781f48afc469e0e2bb31545b072931e0f79d7e7

--- a/res/xml/settings_layout.xml
+++ b/res/xml/settings_layout.xml
@@ -49,6 +49,16 @@
         aicpextras:unitsLeft=""
         aicpextras:unitsRight="" />
 
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="ae_nav_drawer_checked_text"
+        android:title="@string/ae_nav_drawer_checked_text_title"
+        android:defaultValue="@color/navDrawerTextChecked" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="ae_nav_drawer_unchecked_text"
+        android:title="@string/ae_nav_drawer_unchecked_text_title"
+        android:defaultValue="@color/navDrawerText" />
+
     <Preference
         android:key="ae_settings_restore_defaults"
         android:title="@string/ae_settings_restore_defaults_title" />
